[project]
name = "nodax"
description = "AnonymousName"
version = "0.0.1"
dependencies = [
    "jax >= 0.3.4",
    "equinox >= 0.9.2",
    "optax >= 0.1.1",
    "flax",
    "jraph",
    "pyvis==0.3.1",
    "pytest",
]

[project.optional-dependencies]
dev = [
    "seaborn",
    "pyvista[trame]"
]

[tool.setuptools]
py-modules = ["nodax"]
