[project]
name = "ncf_torch"
description = "Neural Context Flows for Meta-Learning of Dynamical Systems"
version = "0.0.1"
dependencies = [
    "torch >= 2.2.0",
    "pyvis==0.3.1",
    "pytest",
]

[project.optional-dependencies]
dev = [
    "seaborn",
    "pyvista[trame]"
]

[tool.setuptools]
py-modules = ["ncf_torch"]
